# stock-finder

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
analysis/findings/: PREDICTIVE_FRAMEWORK.md  RESEARCH_SUMMARY.md  phase1_data_inventory.md  phase2_single_variable.md  phase3_multi_variable.md  theme_timeline.md
analysis/scripts/: phase1_data_inventory.py  phase2_single_variable.py  phase3_multi_variable.py
config/: settings.yaml
scripts/: populate_themes.py
src/stock_finder/: __init__.py  __main__.py  cli.py  config.py
src/stock_finder/analysis/: __init__.py  analyzer.py  deriver.py  framework.py  models.py  statistics.py
src/stock_finder/dashboard/: __init__.py  generator.py
src/stock_finder/data/: __init__.py  base.py  cache.py  cached_provider.py  database.py  fmp_provider.py  nasdaq_ftp.py  ticker_source.py  yfinance_provider.py
src/stock_finder/models/: __init__.py  results.py
src/stock_finder/research/: __init__.py  queries.py  runner.py
src/stock_finder/scanners/: __init__.py  base.py  gainer_scanner.py
src/stock_finder/scoring/: __init__.py  modes.py  report.py  scorer.py
tests/: __init__.py  conftest.py
tests/integration/: test_cache_integration.py  test_scan_pipeline.py  test_yfinance.py
tests/unit/: test_analyzer.py  test_cache.py  test_calculations.py  test_criteria.py  test_fmp_provider.py  test_formatters.py  test_parallel.py  test_scanner.py  test_scorer.py  test_scoring_modes.py  test_swing_detection.py  test_touch_detection.py  test_trendline_fitting.py
(+23 files in other folders)
